--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Sample code</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Workout Dice</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <script src="src/index.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <h1>Workout Dice</h1>
+  </body>
+</html>
