--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Workout Dice</h1>
+
+    <h1>Roll the dice to see your workout!</h1>
+
+    <id="dice-list"/id>
+    
     <div> </div>
   </body>
 </html>
