--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Workout Dice</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    <script src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Workout Dice</h1>
@@ -16,3 +15,7 @@
     <div> </div>
   </body>
 </html>
+
+<script src="src/dice_set.js" charset="utf-8"></script>
+<script src="src/workout.js" charset="utf-8"></script>
+<script src="src/index.js" charset="utf-8"></script>
