render dice sets

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <h1>Roll the dice to see your workout!</h1>
 
-    <id="dice-list"/id>
+  
     
-    <div> </div>
+    <div id="dice-list"></div> 
   </body>
 </html>
 
