--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </body>
 </html>
 
-<script src="src/dice_set.js" charset="utf-8"></script>
+<script src="src/diceset.js" charset="utf-8"></script>
+<script src="src/dicesetservices.js" charset="utf-8"></script>
 <script src="src/workout.js" charset="utf-8"></script>
 <script src="src/index.js" charset="utf-8"></script>
