--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
   
     
     <div id="dice-list"></div> 
+
+    <div class = "scene">
+      <div class="cube">
+       <div class="cube__face cube__face--1">1</div>
+       <div class="cube__face cube__face--2">2</div>
+       <div class="cube__face cube__face--3">3</div>
+       <div class="cube__face cube__face--4">4</div>
+       <div class="cube__face cube__face--5">5</div>
+       <div class="cube__face cube__face--6">6</div>
+     </div>
+     
+     <button class = "rollBtn">Roll Dice</button>
+   </div>
+
+  <!-- reference: https://icodemag.com/3d-rolling-dice-css-javascript/ -->
+
   </body>
 </html>
 
