--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
     <h1>Workout Dice</h1>
 
     <h1>Roll the dice to see your workout!</h1>
-
-  
     
     <div id="dice-list"></div> 
 
     <div class = "scene">
-      <div class="cube">
-       <div class="cube__face cube__face--1">1</div>
-       <div class="cube__face cube__face--2">2</div>
-       <div class="cube__face cube__face--3">3</div>
-       <div class="cube__face cube__face--4">4</div>
-       <div class="cube__face cube__face--5">5</div>
-       <div class="cube__face cube__face--6">6</div>
+      <div class = "cube">
+       <div class = "cube__face cube__face--1">1</div>
+       <div class = "cube__face cube__face--2">2</div>
+       <div class = "cube__face cube__face--3">3</div>
+       <div class = "cube__face cube__face--4">4</div>
+       <div class = "cube__face cube__face--5">5</div>
+       <div class = "cube__face cube__face--6">6</div>
      </div>
      
-     <button class = "rollBtn">Roll Dice</button>
+     <button class = "button">Roll Dice</button>
    </div>
 
   <!-- reference: https://icodemag.com/3d-rolling-dice-css-javascript/ -->
 
-  </body>
+  <div id="workout-list"></div> 
+
+
+</body>
 </html>
 
 <script src="src/diceset.js" charset="utf-8"></script>
