fetch request for workout

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
 
     <div class = "scene">
       <div class = "cube">
-       <div class = "cube__face cube__face--1">1</div>
-       <div class = "cube__face cube__face--2">2</div>
-       <div class = "cube__face cube__face--3">3</div>
-       <div class = "cube__face cube__face--4">4</div>
-       <div class = "cube__face cube__face--5">5</div>
-       <div class = "cube__face cube__face--6">6</div>
+       <div class = "cube__face cube__face--1">Side 1</div>
+       <div class = "cube__face cube__face--2">Side 2</div>
+       <div class = "cube__face cube__face--3">Side 3</div>
+       <div class = "cube__face cube__face--4">Side 4</div>
+       <div class = "cube__face cube__face--5">Side 5</div>
+       <div class = "cube__face cube__face--6">Side 6</div>
      </div>
      
      <button class = "button">Roll Dice</button>
    </div>
 
-  <!-- reference: https://icodemag.com/3d-rolling-dice-css-javascript/ -->
 
 
 </body>
