move domcontentloaded to index.js

--- a/index.html
+++ b/index.html
@@ -35,4 +35,5 @@
 <script src="src/diceset.js" charset="utf-8"></script>
 <script src="src/dicesetservices.js" charset="utf-8"></script>
 <script src="src/workout.js" charset="utf-8"></script>
+<script src="src/workoutservices.js" charset="utf-8"></script>
 <script src="src/index.js" charset="utf-8"></script>
