begin create from in html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
 
 
      <button class = "button">Roll Dice</button>
+   
+    </div>
+
+   <h1>Add a workout.</h3>
+    
+   <div id="form-list"></div> 
+
+   <div id="form-list"></div> 
+
+   <div id="name-input"></div> 
+
    </div>
-
-
 
 </body>
 </html>
