add field for name on form

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
    
     </div>
 
-   <h1>Add a workout.</h3>
-    
-   <div id="form-list"></div> 
-
-   <div id="form-list"></div> 
-
-   <div id="name-input"></div> 
+   <h1>Add a new workout.</h2>
+   <form id="form"></div> 
+      <label for="name-input">Name:</label>
+      <input type="text" name="name" id="name-input"><br><br>
+    </form>
 
    </div>
 
