--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
    
     </div>
 
-   <h1>Add a new workout.</h2>
+   <h1>Add a workout.</h2>
    <form id="form"></div> 
       <label for="name-input">Name:</label>
       <input type="text" name="name" id="name-input"><br><br>
     </form>
+
+    <button class = "button">Add Workout</button>
+
 
    </div>
 
