--- a/index.html
+++ b/index.html
@@ -37,4 +37,5 @@
 <script src="src/dicesetservices.js" charset="utf-8"></script>
 <script src="src/workout.js" charset="utf-8"></script>
 <script src="src/workoutservices.js" charset="utf-8"></script>
+<script src="src/form.js" charset="utf-8"></script>
 <script src="src/index.js" charset="utf-8"></script>
