--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div id="workout-list"></div> 
 
 
-     <button class = "button">Roll Dice</button>
+     <button class = "roll-button">Roll Dice</button>
    
     </div>
 
-   <h1>Add a workout.</h2>
+   <h2>Add an exercise to your workout.</h2>
    <form id="form"></div> 
       <label for="name-input">Name:</label>
       <input type="text" name="name" id="name-input"><br><br>
     </form>
 
-    <button class = "button">Add Workout</button>
+    <button class = "form-button">Add Workout</button>
 
 
    </div>
