console log event listener

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
     <div id="workout-list"></div> 
 
-
-     <button class = "roll-button">Roll Dice</button>
    
     </div>
 
@@ -25,7 +23,7 @@
       <input type="text" name="name" id="name-input"><br><br>
     </form>
 
-    <button class = "form-button">Add Workout</button>
+    <button>Add Workout</button> 
 
 
    </div>
