form event listener updates

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
    <form id="form"></div> 
       <label for="name-input">Name:</label>
       <input type="text" name="name" id="name-input"><br><br>
+      <button type="submit">Add Exercise</button>
     </form>
-
-    <button>Add Workout</button> 
-
 
    </div>
 
