--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <div id="dice-list"></div> 
 
     <div id="workout-list"></div> 
+    <br/>
 
    
     </div>
 
    <h2>Add an exercise to your workout.</h2>
    <form id="form"></div> 
-      <label for="name-input">Name:</label>
-      <input type="text" name="name" id="name-input"><br><br>
+      <input id="name-input" type="text" placeholder="Name of Exercise"/>
+      <br/>
+      <br/>
       <button type="submit">Add Exercise</button>
     </form>
 
