--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Workout Dice</h1>
+    <h1>WORKOUT DICE</h1>
 
     <h1>Roll the dice to see your workout!</h1>
     
