update form with workout and exercise

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Workout Dice</title>
+    <title>Workout Form</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>WORKOUT DICE</h1>
+    <h1>WORKOUT FORM</h1>
 
-    <h1>Roll the dice to see your workout!</h1>
+    <h1>Quick home workouts - no equipment needed!</h1>
     
-    <div id="dice-list"></div> 
-
-
     <div id="workout-list"></div> 
+
+
+    <div id="exercise-list"></div> 
 
     <br/>
 
@@ -33,9 +33,9 @@
 </body>
 </html>
 
-<script src="src/diceset.js" charset="utf-8"></script>
-<script src="src/dicesetservices.js" charset="utf-8"></script>
 <script src="src/workout.js" charset="utf-8"></script>
 <script src="src/workoutservices.js" charset="utf-8"></script>
+<script src="src/exercise.js" charset="utf-8"></script>
+<script src="src/exerciseservices.js" charset="utf-8"></script>
 <script src="src/form.js" charset="utf-8"></script>
 <script src="src/index.js" charset="utf-8"></script>
