workout fetch request

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     </div>
 
-   <h2>Add an exercise to your workout.</h2>
+   <h2>Add exercises to your workout.</h2>
    <form id="form"></div> 
       <input id="name-input" type="text" placeholder="Name of Exercise"/>
       <br/>
