add reps to form

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
    
     </div>
 
-   <h2>Add exercises to your workout.</h2>
+   <h2>Add exercises to a workout.</h2>
    <form id="form"></div> 
       <input id="name-input" type="text" placeholder="Name of Exercise"/>
       <br/>
       <br/>
+      <input id="reps-input" type="text" placeholder="Reps"/>
+
       <button type="submit">Add Exercise</button>
     </form>
 
