--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <br/>
       <br/>
       <input id="reps-input" type="text" placeholder="Reps"/>
+      <label for="workout-dropdown">Category:</label>
+      <input type="text" name="workout" id="workout-name">
+      <select name="workout_id" id="workout-dropdown">
 
       <button type="submit">Add Exercise</button>
     </form>
