create post request

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <br/>
       <br/>
       <input id="reps-input" type="text" placeholder="Reps"/>
-      <label for="workout-dropdown">Category:</label>
+      <label for="workout-dropdown">Workout Name:</label>
       <input type="text" name="workout" id="workout-name">
       <select name="workout_id" id="workout-dropdown">
 
-      <button type="submit">Add Exercise</button>
-    </form>
+        <input type="submit" value="Add Exercise">
+      </form>
 
    </div>
 
