--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
       <br/>
       <br/>
       <input id="reps-input" type="text" placeholder="Reps"/>
-      <label for="workout-dropdown">Workout Name:</label>
-      <input type="text" name="workout" id="workout-name">
+      <label for="workout-dropdown">Select Workout #:</label>
       <select name="workout_id" id="workout-dropdown">
+        <option disabled> Select Workout </option>
+        <option value="1">Workout #1</option>
+        <option value="2">Workout #2</option>
+        <option value="3">Workout #3</option>
+      </select>
 
         <input type="submit" value="Add Exercise">
       </form>
