updated Select Workout on dropdown menu

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <br/>
       <br/>
       <input id="reps-input" type="text" placeholder="Reps"/>
-      <label for="workout-dropdown">Select Workout #:</label>
+      <label for="workout-dropdown">Select Workout:</label>
       <select name="workout_id" id="workout-dropdown">
-        <option disabled> Select Workout </option>
+        <option value="" disabled selected hidden>Select Workout</option>
         <option value="1">Workout #1</option>
         <option value="2">Workout #2</option>
         <option value="3">Workout #3</option>
