--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
    <h2>Add exercises to a workout.</h2>
    <form id="form"></div> 
-      <input id="name-input" type="text" placeholder="Name of Exercise"/>
+      <input id="name-input" type="text" name="name" placeholder="Name of Exercise"/>
       <br/>
       <br/>
       <input id="reps-input" type="text" placeholder="Reps"/>
