start delete exercise method

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <input id="name-input" type="text" name="name" placeholder="Name of Exercise"/>
       <br/>
       <br/>
-      <input id="reps-input" type="text" placeholder="Reps"/>
+      <input id="reps-input" type="text" reps="reps" placeholder="Reps"/>
       <select name="workout_id" id="workout-dropdown">
         <option value="" disabled selected hidden>Select Workout</option>
         <option value="1">Workout #1</option>
