--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Workout List</title>
+    <title>Workout Menu</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>WORKOUT IDEAS</h1>
+    <h1>WORKOUT MENU</h1>
 
     <h1>Quick home workouts - no equipment needed!</h1>
     
