render exercise inputs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Quick home workouts - no equipment needed!</h1>
     
     <div id="workout-list"></div> 
+    <div id="exercise-list"></div> 
+
 
 
     <br/>
